# solana-develop-camp

Week1/: 发行代币并空投给同学(命令行).md
Week2/: 命令行以及websocket连接过程及注释.md
Week3/: 截图-步骤-hash.md
Week3/w3ts/: config-overrides.js  package-lock.json  package.json
Week3/w3ts/src/: App.tsx  App1.tsx  bak_App2.tsx  bak_App3.tsx
Week4/tic-tac-toe/src/: app_runner.rs  board.rs  board_formatter.rs  board_printer.rs  computer.rs  game.rs  game_types.rs  io.rs  lines.rs  marker.rs  players.rs
Week5/: Cargo.toml  client.ts
Week5/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
Week6/cli/: Cargo.toml
Week6/cli/src/: main.rs
Week6/program/: Cargo.toml
Week6/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
Week7/w7/: Anchor.toml
Week7/w7/programs/w7/src/: lib.rs
Week7/w7/tests/: w7.ts
