[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]


[dependencies]
solana-program = "1.16.5"
borsh = "0.10"
num-derive = "0.3.3"
thiserror = "1.0.40"
num-traits = "0.2"
